중간값을 여러 번 반복해서 구하는 경우
세 값의 대소 관계 13 종류의 모든 조합에 대해 중앙값을 구하여 출력하는 프로그램을 작성하도록 하자

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/chap01/Max3.java=UTF-8
 encoding//src/chap01/Max3m.java=UTF-8
+encoding//src/chap01/Med3m.java=UTF-8
